[package]
name = "chart-relative"
version = "0.1.1"
authors = ["Daniel James Baumann <dan.james.baumann@gmail.com>"]
description = "Compact bar charts in the terminal."
license = "MIT OR Apache-2.0"
repository = "https://github.com/guapodero/chart-relative"
keywords = ["console", "visualization"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
colored = "2"
auto-args = "0.3"
